fixed the horizontal scroll issue in league table

--- a/appengine/css/style.css
+++ b/appengine/css/style.css
@@ -105,6 +105,11 @@ tr:nth-child(even)
 	background:#e9e9e9;
 }
 
+#league-table {
+	overflow: auto;
+}
+
+
 @media screen and (max-width: 780px) {
 	.third {
 		width: 48%;
